# Publisher

./: GCAT_Paper_1.tex  LICENSE  P0_CommitTime_Synthesis_v1.tex  P1_GCAT_Geometric_v1.tex  P2_Rigel_Geometric_v1.tex  P3_Lag_Geometric_v1.tex  P4_TrustKernel_Distributed_v1.tex  P5_CommitTime_Execution_v1.tex  P6_CommitGate_Executable_v1.tex  P7_FormalGuarantees_Viability_v1.tex  P8_AdversarialRobustness_v1.tex  PUBLISHER_INTEGRATION_SPEC.md  PUBLISHER_MIRROR_HANDOFF.md  PWC002_MIRROR_HANDOFF.md  README.md  TEMP_CLEANUP_4.md  papers.html  papers.json  papers_manifest.yml  publisher.css  publisher.js  pyproject.toml  requirements.txt  stegverse.architecture.json  stegverse_demo_bundle_manifest_v1.yml
Papers/: device-continuity-layer-governed-hardware-abstraction.md
cases/: CASE-2026-06-ANTHROPIC-FABLE-MYTHOS-SUSPENSION.md  rtg_001_solver_handoff_case.md
dashboard/: index.html
data/: device-continuity-layer.json  device-continuity-receipt.json  ecosystem-chat-activation-status.json  executor-activation-live-evidence.v1.json  gcat_capacity_scenarios.json  gcat_capacity_sensitivity.json  generated-stegpay-site-ingestion.json  iw-irreversibility-distribution.json  publisher-final-local-complete.json  publisher-repo-local-complete.json  repo-standards-import-awareness.json  spe-receipt-chain-propagation.json  spe-v0-5-0-status.json  stegpay-stegops-generated-integration-status.json  stegtalk-local-candidate-publisher-receipt.json  stegtalk-local-candidate.json  sv-continuity-109-publisher-verification.json  tcl-propagation-intake.json  tcl-propagation-receipt.json  (+1 more)
(+283 files in other folders)
