[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stegverse-publisher"
version = "1.0.0"
description = "Cross-org publication orchestration for StegVerse"
readme = "README.md"
license = {text = "Commercial"}
requires-python = ">=3.9"
dependencies = [
    "stegverse-core-lite>=1.0.0",
    "stegverse-core-full>=1.0.0",
    "stegverse-core-addons>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/GCAT-BCAT-Engine/Publisher"
Documentation = "https://github.com/GCAT-BCAT-Engine/Publisher/docs"
Repository = "https://github.com/GCAT-BCAT-Engine/Publisher"

[tool.setuptools.packages.find]
where = ["src"]
